@@ -74,6 +74,7 @@ struct _gtk_sat_list
     GKeyFile         *cfgdata;
     gint              sort_column;
     GtkSortType       sort_order;
+    GtkTreeModel     *sortable;     /*!< a sortable version of the tree model for filtering */
     
      void (* update) (GtkWidget *widget);  /*!< update function */
 };
@@ -111,6 +112,7 @@ typedef enum {
      SAT_LIST_COL_PHASE,       /*!< Phase. */
      SAT_LIST_COL_ORBIT,       /*!< Orbit Number. */
      SAT_LIST_COL_VISIBILITY,  /*!< Visibility. */
+     SAT_LIST_COL_DECAY,       /*!< Whether the satellite is decayed or not. */
      SAT_LIST_COL_NUMBER
 } sat_list_col_t;
 
@@ -142,7 +144,8 @@ typedef enum {
      SAT_LIST_FLAG_MA         = 1 << SAT_LIST_COL_MA,          /*!< Mean Anomaly. */
      SAT_LIST_FLAG_PHASE      = 1 << SAT_LIST_COL_PHASE,       /*!< Phase. */
      SAT_LIST_FLAG_ORBIT      = 1 << SAT_LIST_COL_ORBIT,       /*!< Orbit Number. */
-     SAT_LIST_FLAG_VISIBILITY = 1 << SAT_LIST_COL_VISIBILITY   /*!< Visibility. */
+     SAT_LIST_FLAG_VISIBILITY = 1 << SAT_LIST_COL_VISIBILITY,  /*!< Visibility. */
+     SAT_LIST_FLAG_DECAY      = 1 << SAT_LIST_COL_DECAY      /*!< Decayed. */
 } sat_list_flag_t;
 
 
